crates/ent/derive_ent/tests/ui/invalid-field-type.rs
use derive_ent::Ent;

struct Thing;

#[derive(Ent)]
struct Foo {
    bar: Thing,
}

fn main() {}
